--- a/css/main.css
+++ b/css/main.css
@@ -46,17 +46,12 @@ html, body{
   height: 100%;
 }
 
-@keyframes accessin4 {
-    0%{opacity: 0;}
-    20%{opacity: 0;}
-    100% {opacity: 1;}
-}
 
 #content{
 	position: relative;
 	overflow-x:hidden; 
   animation: accessin4 3s ease-in-out;
-  width: 950px;
+  width: 1000px;
   margin: 0 auto;
 }
 
@@ -71,25 +66,8 @@ html, body{
   height: 43px;
 }
 
-@keyframes accessin {
-    from {transform: scale(1.5,1.5);opacity: 0;}
-    to {transform: scale(1,1);opacity: 1;}
-}
-
-@keyframes accessin2 {
-    0%{left: 65px;opacity: 0;}
-    20%{left: 65px;opacity: 0;}
-    100% {left:10px;opacity: 1;}
-}
-
-@keyframes accessin3 {
-    0%{right: 65px;opacity: 0;}
-    20%{right: 65px;opacity: 0;}
-    100% {right:10px;opacity: 1;}
-}
 
 .title{
-	animation: accessin 1s ease-in-out;
 	font-size: 26pt;
 	font-weight: 700;
 	text-align: center;
@@ -104,6 +82,7 @@ a{
   text-decoration: none;
   color: black;
 }
+
 
 
 
@@ -125,7 +104,6 @@ a{
   top:12px;
   left: 10px;
   height: 21px;
-  animation: accessin2 2s;
   cursor: pointer;
   text-align: right;
 
@@ -133,6 +111,7 @@ a{
 
 .manu.about:hover{
   border-bottom: 1px solid black;
+  color: black;
 }
 
 /*.manu.about:active{
@@ -141,6 +120,7 @@ a{
 
 .manu.works:hover{
   border-bottom: 1px solid black;
+  color: black;
 }
 
 /*.manu.works:active{
@@ -153,7 +133,6 @@ a{
   top:12px;
   right: 10px;
   height: 21px;
-  animation: accessin3 2s;
   cursor: pointer;
 
 }
@@ -162,7 +141,7 @@ a{
 
 .item{
   width: 100%;
-  margin: 200px auto 0 auto;
+  margin: 70px auto 50px auto;
   /*background: yellow;*/
 }
 
@@ -171,7 +150,7 @@ a{
 }
 
 .brief{
-  width: 310px;
+  width: 191px;
   text-align: center;
   /*vertical-align: middle;*/
   /*padding: 0 50px 0 50px;*/
@@ -179,13 +158,8 @@ a{
 
 .thumbnail{
   width: 620px;
-  height: 310px;
+  /*max-height: 310px;*/
   margin: 0 auto;
-  /*padding-left: 4.5px;*/
-/*  background-image: url("../assets/icons/webtag.svg");
-  background-repeat: no-repeat;
-  background-position: right top;
-  background-attachment: fixed;*/
 }
 
 .detailsm{
@@ -193,9 +167,35 @@ a{
 }
 
 .detail{
-  width: 310px;
+  width: 189px;
   text-align: center;
   /*padding: 0 50px 0 50px;*/
+}
+
+.detailp{
+  display: inline-block;
+  margin: 0 5px 0 5px;
+}
+
+.briefp{
+  text-align: left;
+}
+
+.deslink{
+  transition:0.5s;
+  border-radius: 5px;
+}
+
+.deslink:hover{
+  /*text-decoration: underline;*/
+  transition:0.5s;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2); 
+}
+
+.deslink:active{
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0);
+  color: grey;
+  transition:0s;
 }
 
 table, td, th {
@@ -214,6 +214,25 @@ td{
     /*vertical-align: middle;*/
 }
 
+
+.shareit{
+  display: none;
+}
+
+.shareme:hover .share{
+  display: none;
+}
+
+.shareme:hover .shareit{
+  display: inline;
+}
+
+.shareme{cursor: pointer;}
+
+.comp{
+  height: 10px;
+}
+
 h1{
   font-size: 26pt;
   font-weight: 700;
@@ -230,7 +249,7 @@ h2{
 
 h3{
   font-size: 14pt;
-  font-weight: 500;
+  font-weight: 400;
   margin: 0 auto;
   letter-spacing: 0.6px;
 }
@@ -243,10 +262,11 @@ h4{
 }
 
 h6{
-  font-size: 9pt;
-  font-weight: 200;
+  font-size: 10pt;
+  font-weight: 500;
   letter-spacing: 0.5px;
-  margin: 0 auto;
+  margin: 2px auto 15px;
+  color: grey;
 }
 
 p{
@@ -254,11 +274,12 @@ p{
   font-weight: 400;
   margin: 0 auto;
   letter-spacing: 0.5px;
+  line-height: 150%;
 }
 
 /*mybutttttttttttttttttttttttttttt*/
 #mybutt{
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 20px;
@@ -372,22 +393,24 @@ p{
 }
 
 
-.likebtn-wrapper{
-  margin-top: 23px;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
-}
 
 
-
-
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 1000px) {
 
 #content{
   width: 100%;
 }
 
 .item{
-  margin: 50px auto 0 auto;
+  margin: 20px auto 0 auto;
+}
+
+.cutline{
+  width: 90%;
+  height: 1px;
+  border-bottom: 1px dashed grey;
+  margin: 0 auto;
+  opacity: 0.5;
 }
 
 .brief{
@@ -395,18 +418,18 @@ p{
 }
 
 .briefsm{
-  width: 70%;
+  width: 80%;
   /*height: 310px;*/
   display: block;
   text-align: center;
   vertical-align: middle;
   /*padding: 0 50px 0 50px;*/
-  margin: 20px auto 20px auto;
+  margin: 0px auto 0px auto;
 }
 
 .thumbnail{
   width: 100%;
-  /*height: 310px;*/
+  /*height: 500px;*/
   margin: 0 auto;
   /*padding-left: 4.5px;*/
 /*  background-image: url("../assets/icons/webtag.svg");
@@ -420,9 +443,9 @@ p{
 }
 
 .detailsm{
-  margin: 20px auto 70px auto;
+  margin: 0px auto 0px auto;
   display: block;
-  width: 70%;
+  /*width: 70%;*/
   /*width: 310px;*/
   text-align: center;
   /*padding: 0 50px 0 50px;*/
@@ -433,10 +456,25 @@ table {
     width: 100%;
 }
 
+#mybutt{position: relative;}
 
-#mybutt{
-  position: relative;
 }
+
+
+@media screen and (max-width: 1025px) {
+.mysharebuttom1{color: #3b5998;}
+
+
+.mysharebuttom2{color: #55acee;}
+
+
+.mysharebuttom3{color: #3f729b;}
+
+
+
+@media screen and (max-width: 768px) {
+
+.thumbnail{max-height: 500px;}
 
 }
 
@@ -448,17 +486,7 @@ table {
   height: 86px;
 }
 
-@keyframes accessin2 {
-    0%{left: 65px;opacity: 0;}
-    20%{left: 65px;opacity: 0;}
-    100% {left:5px;opacity: 1;}
-}
 
-@keyframes accessin3 {
-    0%{right: 65px;opacity: 0;}
-    20%{right: 65px;opacity: 0;}
-    100% {right:8px;opacity: 1;}
-}
 
 .manu.about{
   position: absolute;
@@ -474,17 +502,9 @@ table {
 
 }
 
-.item{
-  margin: 0 auto 0 auto;
 }
 
-
-}
-
-@media screen and (max-width: 350px) {
-
-
-}
+@media screen and (max-width: 350px) {}
 
 
 
