--- a/css/main.css
+++ b/css/main.css
@@ -182,14 +182,15 @@ a{
 }
 
 .deslink{
-  transition:0.5s;
+  transition:0.3s;
   border-radius: 5px;
 }
 
 .deslink:hover{
   /*text-decoration: underline;*/
-  transition:0.5s;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2); 
+  transition:0.3s;
+  font-weight: 700;
+  /*box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);*/ 
 }
 
 .deslink:active{
@@ -203,6 +204,7 @@ table, td, th {
     border-collapse: collapse;
     margin: 0 auto;
     overflow: hidden;
+    cursor: pointer;
 }
 
 table {
@@ -429,13 +431,7 @@ p{
 
 .thumbnail{
   width: 100%;
-  /*height: 500px;*/
   margin: 0 auto;
-  /*padding-left: 4.5px;*/
-/*  background-image: url("../assets/icons/webtag.svg");
-  background-repeat: no-repeat;
-  background-position: right top;
-  background-attachment: fixed;*/
 }
 
 .detail{
@@ -470,11 +466,10 @@ table {
 
 .mysharebuttom3{color: #3f729b;}
 
-
+}
 
 @media screen and (max-width: 768px) {
 
-.thumbnail{max-height: 500px;}
 
 }
 
