--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,10 @@ a{
   /*vertical-align: middle;*/
   /*padding: 0 50px 0 50px;*/
 }
+.brief span{
+  font-weight: 700;
+  text-align: left;
+}
 
 .thumbnail{
   width: 620px;
@@ -171,6 +175,10 @@ a{
   width: 189px;
   text-align: center;
   /*padding: 0 50px 0 50px;*/
+}
+.detail span{
+  font-weight: 700;
+  text-align: left;
 }
 
 .detailp{
