--- a/mixx/css/main.css
+++ b/mixx/css/main.css
@@ -33,8 +33,11 @@
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff");
 }
 
+
+
 * {
     font-family: 'San Francisco', sans-serif;  
+    hyphens: none;
 }
 
 *::-webkit-scrollbar { 
@@ -43,7 +46,9 @@
 
 html, body{
 	margin: 0;
-  height: 100%;
+  height: auto;
+  background: #191A1E;
+
 }
 
 
@@ -51,20 +56,47 @@ html, body{
 	position: relative;
 	overflow-x:hidden; 
   animation: accessin4 3s ease-in-out;
-  width: 1000px;
-  margin: 0 auto;
+  /*width: 1000px;*/
+  margin: 90px auto 0;
 }
 
 /*navvvvvvvvvvvvvvvvvvvvvvvvv*/
 
 #nav{
-	position: relative;
+	position: fixed;
 	top:10px;
+  right: 0;
+  left: 0;
+  z-index: 5;
   margin: 0 auto;
   width: 500px;
   height: 43px;
+  z-index: 1;
 }
 
+.readmore{
+  max-width: 630px;
+  padding: 0 15px;
+  margin: 15px auto;
+  text-align: right;
+  cursor: pointer;
+  display: block;
+  border-top: 1px dashed grey;
+}
+
+.splashscreen{
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.readmore:hover {
+  text-decoration: underline;
+}
+
+#readmore{
+display: none;
+}
 
 .title{
 	font-size: 26pt;
@@ -72,18 +104,113 @@ html, body{
 	text-align: center;
 	letter-spacing: 6px;
 	margin: 0 auto;
-  width: 222px;
+  width: 226px;
   cursor: pointer;
   color: white;
+  font-family: 'San Francisco', sans-serif;
+  text-indent: 6px;
+}
+
+.headpic{
+  display: block;
+  width: 50%;
+  margin: 70px auto 20px;
+}
+
+.tagline{
+  text-align: center;
+  font-weight: 200;
+  letter-spacing: 1px;
+  margin-bottom: 70px;
+  padding: 0 10px;
+}
+
+table, td {
+/*    border: 1px solid black;*/
+    border-collapse: collapse;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 50px 50px;
+}
+
+table {
+    width: 100%;
+}
+
+.sm{
+  display: none;
+  width: 100%;
+}
+
+#inflight{ 
+  margin-bottom: 30px;
+}
+
+.lg{
+  width: 50%;
+}
+
+.tagline2{
+  text-align: left;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 0 10px;
+  max-width: 450px;
+}
+
+.tagline3{
+  text-align: center;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 0 15px;
+  max-width: 600px;
+}
+
+/*.tagline2 span{
+  font-weight: 400;
+}*/
+
+p.tagline2{
+  text-align: left;
+  max-width: 450px;
+  font-size: 12pt;
+}
+
+.tagline2 a{
+  cursor: pointer;
+  color: #999;
+}
+
+.tagline2 a:hover{
+  text-decoration: underline;
+
+}
+
+
+p.tagline3{
+  text-align: center;
+  max-width: 650px;
+  font-size: 12pt;
+}
+
+.tagline3 a{
+  cursor: pointer;
+  color: #999;
+}
+
+.tagline3 a:hover{
+  text-decoration: underline;
+
 }
 
 a{
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
-
-
+a:hover{
+  color: grey;
+}
 
 .manu{
     display: block;
@@ -97,6 +224,7 @@ a{
     margin: 0 auto;
     letter-spacing: 0.6px;
     color: white;
+    font-family: 'San Francisco', sans-serif;
 }
 
 .manu.about{
@@ -106,18 +234,17 @@ a{
   height: 21px;
   cursor: pointer;
   text-align: right;
-
 }
 
 .manu.about:hover{
-  border-bottom: 1px solid white;
-  color: white;
+  border-bottom: 1px solid #ccc;
+  color: #ccc;
 }
 
 
 .manu.works:hover{
-  border-bottom: 1px solid white;
-  color: white;
+  border-bottom: 1px solid #ccc;
+  color: #ccc;
 }
 
 
@@ -128,61 +255,317 @@ a{
   right: 10px;
   height: 21px;
   cursor: pointer;
-
 }
 /*navvvvvvvvvvvvvvvvvvvvvvvvv ennnnnnnnds*/
 
 .showcase{
-  width: 100%;
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+.showcasesm{
+  display: none;
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+
+.showcasemap{
+  max-width: 1000px;
+  margin: 0 auto;
+  display: block;
+}
+
+.smshowcase{
+  max-width: 650px;
+  margin: 80px auto;
+  display: block;
+}
+
+.character{
+  max-width: 300px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.characterds{
+  display: inline-block;
+  max-width: 300px;
+  vertical-align: middle;
+  padding: 0 0 0 40px;
+  font-weight: 200;
+}
+
+.characterds span{
+  font-weight: 600;
+  font-size: 18pt;
 }
 
 .comp{
   height: 10px;
 }
 
+
+
+#phone{
+  height: 400px;
+  padding: 50px 50px;
+  margin-bottom: 30px;
+}
+
+
+
+#map {
+  position: relative;
+  /*top: -28px;*/
+  right: 0;
+    width: 100%;
+    height: 500px;
+}
+
+@keyframes myfly {
+    from {left:-15%;}
+    to {left:115%;}
+}
+
+.myflyanime{
+  position: absolute;
+  z-index: 1;
+  top:200px;
+  left:-15%;
+  width: 150px;
+  -webkit-filter: blur(6px);
+    animation: myfly 10s linear 5s infinite;
+}
+
+@keyframes myradio {
+    0% {right:-300px;}
+    20% {right: 10px;}
+    75%{right: 10px;}
+    100%{right: -300px;}
+}
+
+@keyframes myradio {
+    0% {right:-300px;}
+    20% {right: 10px;}
+    75%{right: 10px;}
+    100%{right: -300px;}
+}
+
+.localradio{
+  position: absolute;
+  z-index: 1;
+  top:30px;
+  right: -300px;
+  width: 20%;
+  min-width: 200px;
+  animation: myradio 10s ease-in-out 5s infinite;
+}
+
+.localpromote{
+  position: absolute;
+  z-index: 1;
+  top:30px;
+  right: -300px;
+  width: 20%;
+  min-width: 200px;
+  animation: myradio 10s ease-in-out 5s infinite;
+}
+
+.mapcontain{
+  position: relative;
+  margin-top: -28px;
+  right: 0;
+  width: 100%;
+  height: 500px;
+}
+
+.nointeract{
+  position: absolute;
+  background: #191A1E;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+    -webkit-transition-duration: 1.2s; /* Safari */
+    transition-duration: 1.2s;
+}
+
+.nointeract h1{
+position: absolute;
+top: 45%;
+left: 0;
+right: 0;
+text-align: center;
+margin: auto auto;
+padding: 0 20px;
+line-height: 100%;
+}
+
+.nointeract span{
+  font-weight: 400;
+  font-size: 18pt;
+}
+
+.nointeract:hover{
+  opacity: 0.8;
+    -webkit-transition-duration: 1.2s; /* Safari */
+    transition-duration: 1.2s;
+}
+
 h1{
-  font-size: 26pt;
+  font-size: 24pt;
   font-weight: 700;
-  letter-spacing: 6px;
   margin: 0 auto;
+  color: white;
 }
 
 h2{
-  font-size: 18pt;
+  font-size: 20pt;
   font-weight: 600;
-  letter-spacing: 3px;
   margin: 0 auto;
+  color: white;
+
 }
 
 h3{
   font-size: 14pt;
   font-weight: 400;
   margin: 0 auto;
-  letter-spacing: 0.6px;
+  color: white;
+
 }
 
 h4{
   font-size: 12pt;
   font-weight: 500;
-  letter-spacing: 0.5px;
   margin: 0 auto;
+  color: white;
+
 }
 
 h6{
-  font-size: 10pt;
-  font-weight: 500;
-  letter-spacing: 0.5px;
+  font-size: 12pt;
+  font-weight: 200;
   margin: 2px auto 15px;
-  color: grey;
+  color: white;
+
+
 }
 
 p{
   font-size: 10pt;
   font-weight: 400;
   margin: 0 auto;
-  letter-spacing: 0.5px;
+  line-height: 150%;
+  color: white;
+
+}
+
+.protitle{
+  text-align: center;
+  margin-bottom: 20px;
+  color: white
+}
+
+.protitle span{
+  font-weight: 200;
+}
+
+.protitle1{
+  text-align: center;
+  margin: 60px auto 30px;
+  color: white;
+}
+
+.prosubtitle{
+  font-weight: 200;
+  text-align: center;
+  color: white;
+  padding: 0 20px;
+ /* margin-bottom: 40px;*/
+}
+
+.prodescribe{
+  max-width: 600px;
+  font-weight: 400;
+  text-align: left;
+  line-height: 150%;
+  text-indent: -6px;
+  color: white;
+}
+
+.prodescribe1{
+  max-width: 600px;
+  font-weight: 400;
+  text-align: left;
+  line-height: 150%;
+  color: white;
+}
+
+.procredit{
+  max-width: 600px;
+  font-weight: 200;
+  text-align: center;
+  line-height: 200%;
+  color: white;
+/*  margin-bottom: 30px;*/
+}
+
+.itis{
+  max-width: 600px;
+  margin: 0 auto;
+  display: none;
+}
+
+#elevatorpitch{
+  max-width: 600px;
+  text-align: left;
+  margin: 20px auto 0;
+  font-weight: 500;
+  color: white;
   line-height: 150%;
 }
+
+#elevatorpitch span{
+  font-weight: 700;
+}
+
+.whatis{
+  cursor: pointer;
+}
+
+.imgnote{
+  text-align: center;
+  font-weight: 200;
+  color: grey;
+  text-decoration: underline;
+  opacity: 0.8;
+}
+
+.quotation{
+  max-width: 500px;
+  color: #bbb;
+  text-align: right;
+  margin: 70px auto 50px;
+}
+
+.keypoint{
+  font-weight: 200;
+  max-width: 450px;
+  text-align: center;
+  margin: 150px auto 150px;
+}
+
+.keypoint span{
+  font-weight: 600;
+}
+
+.whatis:hover ~ .itis { display: block; }
+
+
 
 /*mybutttttttttttttttttttttttttttt*/
 #mybutt{
@@ -190,11 +573,7 @@ p{
   bottom: 0;
   width: 100%;
   height: 20px;
-  /*margin-bottom: -3px;*/
-  /*background: #333;*/
-/*  border-top: .08em solid #444;
-  border-bottom: 1px solid #444 outset;*/
-/*  opacity: 0.95;*/
+/*  background: #373941;*/
 }
 
 .mycopyright{
@@ -204,12 +583,8 @@ p{
   width: 160px;
   height: 20px;
   text-align: center;
-  /*border-right: .08em solid #444;*/
 }
 
-/*.mycopyright:hover{
-  background: #444;
-}*/
 
 .mycopyright a:hover{
   text-decoration: none;
@@ -308,6 +683,45 @@ p{
   width: 100%;
 }
 
+.showcasemap{
+  width: 100%;
+}
+.prodescribe1{
+padding: 0 15px;
+}
+
+.prodescribe{
+padding: 0 15px;
+}
+
+.quotation{
+padding:  0 15px;
+}
+
+.keypoint{
+padding:0 15px;
+}
+
+#elevatorpitch{
+padding:0 25px;
+}
+
+.sm{
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin: 25px auto;
+}
+
+#phone .sm img{
+ width: 85%;
+
+}
+
+.lg{
+  display: none;
+}
+
 
 #mybutt{position: relative;}
 
@@ -315,7 +729,7 @@ p{
 
 
 @media screen and (max-width: 1025px) {
-.mysharebuttom1{color: #3b5998;}
+/*.mysharebuttom1{color: #3b5998;}
 
 
 .mysharebuttom2{color: #55acee;}
@@ -323,10 +737,25 @@ p{
 
 .mysharebuttom3{color: #3f729b;}
 
+}*/
+
+@media screen and (max-width: 610px) {
+.character{
+  max-width: 50%;
+  display: block;
+  margin: 0 auto;
 }
 
-@media screen and (max-width: 768px) {
+.nointeract h1{
+  top: 30%;
+}
 
+.characterds{
+  display:block;
+ margin: 20px auto 0;
+ text-align: center;
+ padding: 0;
+}
 
 }
 
@@ -337,7 +766,14 @@ p{
   height: 86px;
 }
 
+.nointeract h1{
+  top: 40%;
+  font-size: 16pt;
+}
 
+.nointeract span{
+  font-size: 14pt;
+}
 
 .manu.about{
   position: absolute;
