--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ html, body{
   text-align: center;
   letter-spacing: 6px;
   margin: 0 auto;
-  width: 226px;
+  max-width: 230px;
   cursor: pointer;
   font-family: 'San Francisco', sans-serif;
   text-indent: 6px;
