--- a/mixx/css/main.css
+++ b/mixx/css/main.css
@@ -104,7 +104,7 @@ display: none;
 	text-align: center;
 	letter-spacing: 6px;
 	margin: 0 auto;
-  width: 226px;
+  max-width: 230px;
   cursor: pointer;
   color: white;
   font-family: 'San Francisco', sans-serif;
