--- a/css/main.css
+++ b/css/main.css
@@ -323,7 +323,7 @@ h2{
 
 h3{
   font-size: 14pt;
-  font-weight: 400;
+  font-weight: 600;
   margin: 0 auto;
   letter-spacing: 0.6px;
 }
@@ -529,6 +529,9 @@ p{
   /*padding: 0 50px 0 50px;*/
 }
 
+#nav{
+  margin-bottom: 30px;
+}
 
 table {
     width: 100%;
@@ -545,6 +548,7 @@ table {
 @media screen and (max-width: 768px) {
 
 
+
 }
 
 
@@ -552,6 +556,7 @@ table {
 #nav{
   width: 230px;
   height: 86px;
+  margin-bottom: 0;
 }
 
 
