--- a/css/body.css
+++ b/css/body.css
@@ -139,6 +139,7 @@ a{
 	text-align: center;
 	left: 20%;
 	max-width: 450px;
+	cursor: default;
 }
 
 #mixximg{
@@ -173,6 +174,7 @@ a{
 	max-width: 500px;
 	right: 10%;
 	margin: 0 auto;
+	cursor: default;
 }
 
 
@@ -206,6 +208,7 @@ display: none;
 	text-align: center;
 	right: 0;left: 0;
 	margin: 0 auto;
+	cursor: default;
 }
 
 #weteaimg{
@@ -232,6 +235,7 @@ display: none;
 	text-align: center;
 	right: 0;left: 0;
 	margin: 0 auto;
+	cursor: default;
 }
 
 #monsterphoimg{
@@ -260,6 +264,7 @@ display: none;
 	max-width: 500px;
 	right: 0;left: 0;
 	margin: 0 auto;
+	cursor: default;
 }
 
 
