uploaded the facebook archive

--- a/css/body.css
+++ b/css/body.css
@@ -253,7 +253,7 @@ display: none;
 	position: relative;
 	width: 100%;
     height: auto;
-    margin: 200px auto 40px;
+    margin: 150px auto 40px;
 
 }
 
@@ -282,6 +282,45 @@ display: none;
 }
 
 
+#facebookarchive{
+	position: relative;
+	width: 85%;
+    height: auto;
+    margin: 200px auto 0;
+
+}
+
+#facebookarchiveinfo{
+	position: absolute;
+	top: 50px;
+	text-align: center;
+	max-width: 500px;
+	right: 10%;
+	margin: 0 auto;
+	cursor: default;
+}
+
+
+#facebookarchiveimg{
+	position: relative;
+	width: 350px;
+	left: 10%;
+}
+
+#facebookarchiveimgmobile{
+display: none;
+}
+
+#facebookarchivevideo{
+	margin-top: 200px;
+	display: none;
+}
+
+.turnoff{
+	cursor: pointer;
+	margin-left: 5px;
+}
+
 @media screen and (max-width: 1190px) {
 
 
@@ -303,6 +342,12 @@ h3{
 
 	font-size: 20px;
 	line-height: 50px;
+}
+
+#facebookarchiveinfo{
+	max-width: 400px;
+	top: 80px;
+
 }
 
 #companionshipinfo{right: 5%;}
@@ -347,11 +392,36 @@ h3{
 }
 
 #unowninfo{
-	
 	top: 5%;
+}
+
+#facebookarchiveinfo{
+	top: 80px;
+	right: 5%;
+}
+
+#facebookarchiveimg{
+	left: 5%;
+}
 
 }
 
+@media screen and (max-width: 790px) {
+	
+	#facebookarchive{
+    margin: 300px auto 0;
+	}
+
+	#facebookarchiveinfo{
+		top: -180px;
+		right: 5%;
+	}
+}
+
+@media screen and (max-width: 1030px) {
+#facebookarchive{
+	width: 100%;
+}
 }
 
 @media screen and (max-width: 420px) {
@@ -497,7 +567,7 @@ h3{
 	position: relative;
 	width: 100%;
     height: auto;
-    margin: 100px auto 70px;
+    margin: 80px auto 70px;
 
 }
 
@@ -520,7 +590,49 @@ h3{
 	width: 100%;	
 }
 
+#facebookarchive{
+	position: relative;
+	width: 100%;
+    height: auto;
+    margin: 100px auto 0;
+
 }
+
+#facebookarchiveinfo{
+	position: relative;
+	padding: 0 35px;
+	top: 0;
+	text-align: center;
+	right: 0;left: 0;
+	margin: 0 auto;
+}
+
+#facebookarchiveimg{
+	position: relative;
+	display: block;
+	margin: 0 auto;
+	width: 80%;
+	right: 0;left: 0;
+}
+
+#facebookarchivevideo{
+	margin-top: 100px;
+
+}
+
+
+
+/*#companionshipimgmobile{
+	position: relative;
+	display: block;
+	width: 90%;
+	right: -110px;
+	
+}*/
+
+}
+
+
 
 
 
