--- a/css/body.css
+++ b/css/body.css
@@ -262,7 +262,8 @@ display: none;
 	top: 15%;
 	text-align: center;
 	max-width: 500px;
-	right: 0;left: 0;
+	right: 0;
+	left: 0;
 	margin: 0 auto;
 	cursor: default;
 }
@@ -317,8 +318,10 @@ display: none;
 }
 
 .turnoff{
+	font-weight: 100;
 	cursor: pointer;
 	margin-left: 5px;
+	font-size: 100px;
 }
 
 @media screen and (max-width: 1190px) {
