--- a/css/nav.css
+++ b/css/nav.css
@@ -2,6 +2,18 @@
     font-family: 'San Francisco', sans-serif;  
 }
 
+#navbackground{
+  position: fixed;
+  top:0;
+  z-index: +1;
+  width: 100%;
+  height: 62px;
+  background: white;
+  -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
+    transition: all .5s cubic-bezier(.25,.46,.45,.94);
+  
+}
+
 #nav{
 	position: fixed;
 	top:10px;
@@ -11,7 +23,7 @@
   width: 500px;
 /*  background:yellow;*/
   height: 43px;
-  z-index: +1;
+  z-index: +2;
 }
 
 @keyframes accessin {
@@ -139,6 +151,10 @@ height: 2px;
 #nav{
   width: 230px;
   height: 86px;
+}
+
+#navbackground{
+  height: 80px;
 }
 
 @keyframes accessin2 {
