--- a/bubble/css/nav.css
+++ b/bubble/css/nav.css
@@ -1,88 +1,64 @@
-.background{
-  opacity: 0.3;
-  animation: opa 1.5s ease-out;
-  transition: opacity 1s ease-out;
-  transition: background 1s ease-out;
-  width: 100%;
-  height: 65px;
-  top:0;
+* {
+    font-family: 'San Francisco', sans-serif;  
+}
+
+#navbackground{
+  opacity: 0;
   position: fixed;
-  background: rgba(255,255,255,0);
+  top:0;
+  z-index: +1;
+  width: 100%;
+  height: 62px;
+  background: white;
+  -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
+    transition: all .5s cubic-bezier(.25,.46,.45,.94);
 }
 
 #nav{
 	position: fixed;
 	top:10px;
-  left: 0;right: 0;
+  left: 0;
+  right: 0;
   margin: 0 auto;
   width: 500px;
 /*  background:yellow;*/
   height: 43px;
-/*  opacity: 0.1;*/
-
+  z-index: +2;
 }
 
-@keyframes opa {
-    from {opacity: 1;}
-    to {opacity: 0.3;}
+@keyframes accessin {
+    from {transform: scale(1.5,1.5);opacity: 0;}
+    to {transform: scale(1,1);opacity: 1;}
 }
 
-#nav a{
-  color: black;
-  text-decoration: none;
+@keyframes accessin2 {
+    0%{left: 65px;opacity: 0;}
+    20%{left: 65px;opacity: 0;}
+    100% {left:10px;opacity: 1;}
 }
 
-.background:hover{
-  opacity: 1;
-  background: -webkit-linear-gradient( rgba(255,255,255,1), rgba(255,255,255,0)); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0)); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0)); /* For Firefox 3.6 to 15 */
-  background: linear-gradient( rgba(255,255,255,1), rgba(255,255,255,0)); /* Standard syntax (must be last) */
-  transition: opacity 1s ease-out;
-}
-
-#nav *{
-   font-family: 'San Francisco', 'SFCD';  
+@keyframes accessin3 {
+    0%{right: 65px;opacity: 0;}
+    20%{right: 65px;opacity: 0;}
+    100% {right:10px;opacity: 1;}
 }
 
 .title{
-  font-size: 26pt;
-  font-weight: 700;
-  text-align: center;
-  letter-spacing: 6px;
-  margin: 0 auto;
-  max-width: 230px;
-  cursor: pointer;
-  font-family: 'San Francisco', 'SFCD';
-  text-indent: 6px;
-}
-
-.menu.about{
-  position: absolute;
-  top:12px;
-  left: 10px;
-  height: 21px;
-  cursor: pointer;
-  text-align: right;
+	/*animation: accessin 1.5s ease-in-out;*/
+	font-size: 26pt;
+	font-weight: 700;
+	text-align: center;
+	letter-spacing: 6px;
+	margin: 0 auto;
+	max-width: 230px;
+	cursor: pointer;
+	text-indent: 6px;
 
 }
 
-.menu.about:hover{
-  border-bottom: 1px solid black;
-  color: black;
-}
-
-.menu.works:hover{
-  border-bottom: 1px solid black;
-  color: black;
-}
-
-.menu.works{
-  position: absolute;
-  top:12px;
-  right: 10px;
-  height: 21px;
-  cursor: pointer;
+a{
+  text-decoration: none;
+  color:#333333;
 }
 
 .menu{
@@ -98,23 +74,99 @@
     letter-spacing: 0.6px;
 }
 
+.underline{
+position: relative;
+display: inline-block;
+width: 20px;
+bottom: 10px;
+height: 2px;
+/*background: #f1f1f1;*/
+-webkit-transition: all .35s cubic-bezier(.25,.46,.45,.94);
+    transition: all .35s cubic-bezier(.25,.46,.45,.94);
+}
 
-@media screen and (max-width: 1000px) {
-	#nav{
-  		margin-bottom: 30px;
-	}
+.menu.work .underline{
+  background: #666666;
+}
+
+.menu.about{
+  position: absolute;
+  top:11px;
+  left: 10px;
+  height: 21px;
+  /*animation: accessin2 2s;*/
+  cursor: pointer;
+  text-align: right;
+  color: #999999;
+  text-align: center;
+  width: 50px;
+  -webkit-transition: all .35s cubic-bezier(.25,.46,.45,.94);
+    transition: all .35s cubic-bezier(.25,.46,.45,.94);
+}
+
+.menu.about:hover .underline{
+  background: #999999;
+  width: 100%;
+}
+
+.menu.about:hover{
+  color: #333333;
 
 }
+
+/*.menu.about:active{
+  top:8px;
+}*/
+
+.menu.work:hover .underline{
+  background: #999999;
+  width: 100%;
+}
+
+.menu.work:hover{
+  color: #333333;
+}
+
+/*.menu.work:active{
+  top:8px;
+}*/
+
+
+.menu.work{
+  position: absolute;
+  top:11px;
+  right: 10px;
+  height: 21px;
+  width: 45px;
+  /*animation: accessin3 2s;*/
+  cursor: pointer;
+  color: #666666;
+  text-align: center;
+  -webkit-transition: all .35s cubic-bezier(.25,.46,.45,.94);
+    transition: all .35s cubic-bezier(.25,.46,.45,.94);
+}
+
 
 @media screen and (max-width: 520px) {
 #nav{
   width: 230px;
   height: 86px;
-  margin-bottom: 0;
 }
 
-.background{
-  height: 100px;
+#navbackground{
+  height: 86px;
+}
+
+@keyframes accessin2 {
+    0%{left: 65px;opacity: 0;}
+    20%{left: 65px;opacity: 0;}
+    100% {left:5px;opacity: 1;}
+}
+
+@keyframes accessin3 {
+    0%{right: 65px;opacity: 0;}
+    20%{right: 65px;opacity: 0;}
+    100% {right:8px;opacity: 1;}
 }
 
 .menu.about{
@@ -124,11 +176,16 @@
 
 }
 
-.menu.works{
+.menu.work{
   position: absolute;
   top:40px;
   right: 8px;
 
 }
+
+.item{
+  margin: 0 auto 0 auto;
+}
+
 
 }
