--- a/bubble/css/nav.css
+++ b/bubble/css/nav.css
@@ -3,16 +3,29 @@
 }
 
 #navbackground{
-  opacity: 0;
   position: fixed;
   top:0;
   z-index: +1;
   width: 100%;
   height: 62px;
+  opacity: 0;
   background: white;
   -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
     transition: all .5s cubic-bezier(.25,.46,.45,.94);
+
+  
 }
+
+#navbackground2{  
+  display: none;
+position: fixed;
+  z-index: +1;
+  width: 100%;
+
+  background: white;
+  -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
+    transition: all .5s cubic-bezier(.25,.46,.45,.94);}
+
 
 #nav{
 	position: fixed;
@@ -50,10 +63,9 @@
 	text-align: center;
 	letter-spacing: 6px;
 	margin: 0 auto;
-	max-width: 230px;
+	max-width: 240px;
 	cursor: pointer;
-	text-indent: 6px;
-
+   text-indent: 10px;
 }
 
 a{
@@ -85,16 +97,13 @@ height: 2px;
     transition: all .35s cubic-bezier(.25,.46,.45,.94);
 }
 
-.menu.work .underline{
-  background: #666666;
-}
 
 .menu.about{
   position: absolute;
   top:11px;
   left: 10px;
   height: 21px;
-  /*animation: accessin2 2s;*/
+ /* animation: accessin2 2s;*/
   cursor: pointer;
   text-align: right;
   color: #999999;
@@ -107,6 +116,7 @@ height: 2px;
 .menu.about:hover .underline{
   background: #999999;
   width: 100%;
+  
 }
 
 .menu.about:hover{
@@ -121,6 +131,10 @@ height: 2px;
 .menu.work:hover .underline{
   background: #999999;
   width: 100%;
+}
+
+.menu.work .underline{
+  background: #666666;
 }
 
 .menu.work:hover{
@@ -138,7 +152,7 @@ height: 2px;
   right: 10px;
   height: 21px;
   width: 45px;
-  /*animation: accessin3 2s;*/
+/*  animation: accessin3 2s;*/
   cursor: pointer;
   color: #666666;
   text-align: center;
@@ -148,38 +162,69 @@ height: 2px;
 
 
 @media screen and (max-width: 520px) {
-#nav{
-  width: 230px;
-  height: 86px;
+#nav{  
+  top: auto;
+  bottom: 0;
+  width: 300px;
+  height: 65px;
 }
 
-#navbackground{
-  height: 86px;
+#navbackground{display: none;}
+
+#navbackground2{
+  display: block;
+  top: auto;
+  bottom: 0;
+  height: 65px;
+  box-shadow: rgba(0,0,0,0.16) 0 -2px 3px;
+  /*-ms-transform: rotate(180deg); /* IE 9 */
+    /*-webkit-transform: rotate(180deg); *//* Chrome, Safari, Opera */
+    /*transform: rotate(180deg);*/
+     -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94) .1s;
+    transition: all .5s cubic-bezier(.25,.46,.45,.94) .1s;
+    /*animation: accessin4 3s ease-in-out;*/
+}
+
+.title{
+  position: absolute;
+  top: 11px;
+  left: 0;
+  right: 0;
+
+}
+
+.title span{
+  display: none;
 }
 
 @keyframes accessin2 {
     0%{left: 65px;opacity: 0;}
     20%{left: 65px;opacity: 0;}
-    100% {left:5px;opacity: 1;}
+    100% {left:0px;opacity: 1;}
 }
 
 @keyframes accessin3 {
     0%{right: 65px;opacity: 0;}
     20%{right: 65px;opacity: 0;}
-    100% {right:8px;opacity: 1;}
+    100% {right:0px;opacity: 1;}
+}
+
+@keyframes accessin4 {
+    0%{opacity: 0;}
+    100% {opacity: 1;}
 }
 
 .menu.about{
   position: absolute;
-  top:40px;
-  left: 5px;
+  top:23px;
+  left: 0;
 
 }
 
 .menu.work{
   position: absolute;
-  top:40px;
-  right: 8px;
+  top:23px;
+  right: 0;
 
 }
 
