--- a/bubble/css/body.css
+++ b/bubble/css/body.css
@@ -153,6 +153,18 @@ html, body{
 	padding: 40px 0;
 }
 
+#ui{
+	/*background: #f2f2f2;*/
+	/*border: 1px solid #e4e4e4;*/
+	padding: 40px 0;
+}
+
+#appendix{
+	background: #f2f2f2;
+	/*border: 1px solid #e4e4e4;*/
+	padding: 40px 0;
+}
+
 .note1{
 	text-align: center;
 	margin: 0 auto;
@@ -256,7 +268,7 @@ th .hilight{
 	font-weight: 400;
 	line-height: 1.7;
 	max-width: 600px;
-	margin: 10px auto;
+	margin: 10px auto 30px;
 	text-align: center;
 }
 
@@ -287,6 +299,29 @@ th .hilight{
 	margin: 0 auto;
 	font-size: 36px;
 	font-weight: 700;
+}
+
+.mobileview{
+	display: none;
+}
+
+.fullview{
+}
+
+
+@media screen and (max-width: 797px) {
+.mobileview{
+	display: inline;
+}
+
+.fullview{
+	display: none;
+}
+
+.description.mapdescription{
+	margin: 20px auto;
+}
+
 }
 
 
